# Stellar-soroban-contracts

./: CREATE_PR_INSTRUCTIONS.md  EMERGENCY_PAUSE_IMPLEMENTATION.md  GOVERNANCE_SPAM_PROTECTION.md  PR_DESCRIPTION.md  PR_GOVERNANCE_SPAM_PROTECTION.md  PR_PAUSE_DESCRIPTION.md  PR_TEMPLATE.md  error_codes.json  generate_error_catalog.py  symbolic_analysis.py
.github/workflows/: documentation.yml
stellar-insured-contracts/: Cargo.toml
stellar-insured-contracts/contracts/escrow/src/: lib.rs  tests.rs
stellar-insured-contracts/contracts/governance/: Cargo.toml  README.md
stellar-insured-contracts/contracts/governance/src/: lib.rs  pause_test.rs  tests.rs
stellar-insured-contracts/contracts/insurance/src/: lib.rs
stellar-insured-contracts/contracts/oracle/src/: lib.rs
stellar-insured-contracts/contracts/policy/: lib.rs
stellar-insured-contracts/contracts/policy/src/: lib.rs
stellar-insured-contracts/contracts/property-token/src/: lib.rs
stellar-insured-contracts/contracts/risk_pool/: lib.rs
stellar-insured-contracts/contracts/shared/src/: lib.rs  mod.rs  unified_errors.rs
stellar-insured-contracts/contracts/traits/src/: lib.rs
stellar-insured-contracts/docs/: MULTI_ROLE_IMPLEMENTATION_SUMMARY.md  MULTI_ROLE_QUICK_REFERENCE.md  architecture.md  dao-risk-architecture.md  deployment.md  multi-role-identity-model.md  security_pipeline.md
stellar-insured-contracts/security-audit/: checklist.md
stellar-insured-contracts/tests/: Cargo.toml  gas_benchmarks.rs  insurance_load_tests.rs
