[package]
name = "propchain-governance"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
description = "DAO governance contract with spam protection"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
keywords = ["blockchain", "governance", "dao", "defi", "ink", "substrate"]
categories = ["cryptography::cryptocurrencies"]
readme = "../../README.md"
publish = false

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
propchain-traits = { path = "../traits", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-traits/std",
    "sha2/std",
]
ink-as-dependency = []
e2e-tests = []
